--- a/docs/Documentation.tex
+++ b/docs/Documentation.tex
@@ -5,10 +5,7 @@
 \usepackage{array}
 
 \title{Early Discovery of Anxiety/Depression in Teenagers Using Digital Tools}
-\author{Toth Alexandra-Melania\\
-Vlădău Andra-Ioana\\ 
-Mihalcea Ioan-Alexandru
-}
+\author{}
 \date{}
 
 \begin{document}
